2007-10-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add audio/x-xm (XM tracker files)
	as supported (Closes: #489580)

2007-10-24  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

2007-10-24  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/Makefile.am:
	* src/plugins/youtube/youtube.py:
	* src/totem-video-list.c: (totem_video_list_class_init),
	(query_tooltip_cb), (row_activated_cb),
	(default_starting_video_cb):
	* src/totem-video-list.h:
	* src/totemvideolist-marshal.list: Add a signal to TotemVideoList
	to allow users of it to set the MRL just before a video is played,
	which solves YouTube's slowness problem. Also, display the MRL as part
	of the tooltips on the TotemVideoList.

2007-10-24  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-podcast.c:
	(totem_pl_parser_add_itms), (totem_pl_parser_is_itms_feed),
	(parse_opml_outline): Fix parsing of the URLs as supplied on
	the "Connecting to the iTunes Store." page, so that a single-click
	can bring you to rhythmbox

2007-10-24  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-podcast.c: (totem_pl_parser_is_opml),
	(totem_pl_parser_is_xml_feed), (parse_rss_items),
	(totem_pl_parser_add_rss), (parse_opml_outline),
	(parse_opml_head_body), (totem_pl_parser_add_opml):
	* src/plparse/totem-pl-parser-podcast.h:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore),
	(totem_pl_parser_ignore_from_mimetype),
	(totem_pl_parser_parse_internal),
	(totem_pl_parser_can_parse_from_data): Add support for OPML feeds
	(Closes: #489519)

2007-10-23  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/Makefile.am:
	* src/plugins/youtube/youtube.py:
	* src/plugins/youtube/youtube.ui:
	* src/totem-cell-renderer-video.c:
	(totem_cell_renderer_video_class_init),
	(totem_cell_renderer_video_init),
	(totem_cell_renderer_video_set_property),
	(totem_cell_renderer_video_get_property), (get_size),
	(totem_cell_renderer_video_render):