@@ -1,3 +1,10 @@
+2007-10-27  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/plugins/youtube/youtube.py:
+	* src/plugins/youtube/youtube.ui: Split videos out into two
+	treeviews; one for search results and one for related videos,
+	meaning that search results are no longer lost (Closes: #487100)
+
 2007-10-25  Bastien Nocera  <hadess@hadess.net>
 
 	* data/mime-type-list.txt: add audio/x-xm (XM tracker files)
